--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,7 +13,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:13306/cellsystem?serverTimezone=GMT
 # 数据库用户名&密码：
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 
 
 model.port=26660
