--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,6 +7,11 @@ server.port=6660
 
 
 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=1000MB
+
+
+
 #下面这些内容是为了让MyBatis映射
 #指定Mybatis的Mapper文件
 mybatis.mapper-locations=classpath:mappers/*xml
@@ -18,7 +23,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/cellsystem?serverTimezone=GMT
 # 数据库用户名&密码：
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 
 
 
